# xahc

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  hookon-vectors.json
.github/workflows/: ci.yml  release.yml
crates/xahc-cli/: Cargo.toml
crates/xahc-cli/src/: author.rs  build.rs  clean.rs  compose.rs  doctor.rs  fuzz.rs  guardpass.rs  installtx.rs  lint.rs  main.rs  prove.rs  registry.rs  scaffold.rs  sim.rs  test.rs  verify.rs
docs/: AGENTIC.md  TESTNET-PROOF.md  X402-XAHAU.md  XAHC-AUTHOR.md  XAHC-COMPOSE.md  XAHC-FUZZ.md
examples/: agent_guardrail.test.toml  agent_guardrail_stateful.STATE.md  agent_guardrail_stateful.test.toml  big_stack.c  emit_iou.c  emit_payment.c  emit_payment.test.toml  firewall.c  firewall.test.toml  guarded_loop.c  over_budget.c  over_budget.test.toml
include/xahc/: check.h  guard.h  otxn.h  param.h  sfcodes.h  state.h  xahc.h
include/xahc/emit/: payment.h
scripts/: demo.tape  package-lock.json  package.json  verify-emit-vm.mjs  verify-emit.mjs
skills/: README.md
skills/evernode-dapp/: SKILL.md
skills/x402-xahau/: SKILL.md
skills/xahau-amendment/: SKILL.md
skills/xahau-attest/: SKILL.md
skills/xahau-audit/: SKILL.md
skills/xahau-hook/: SKILL.md
skills/xahau-mcp-simulate/: SKILL.md
skills/xahau-prove/: SKILL.md
skills/xahau-ref/: SKILL.md
skills/xahc-guardrail/: SKILL.md
tests/fixtures/: unguarded_loop.c
x402-xahau/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  server.mjs  test.mjs
x402-xahau/demo/: DEMO-RUN.md  README.md  agent.mjs  facilitator-testnet.mjs  resource-server.mjs
x402-xahau/deploy/: .env.example  DEPLOY.md
x402-xahau/docs/: FACILITATOR-TESTNET-PROOF.md
