[package]
name = "xahc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Xahau Hooks, Checked — authoring/compile toolchain for C Hooks (build, lint, sim, test, install-tx)"
keywords = ["xahau", "hooks", "xrpl", "wasm", "blockchain"]
categories = ["command-line-utilities", "development-tools", "cryptography::cryptocurrencies"]
readme = "../../README.md"

[[bin]]
name = "xahc"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walrus = "0.23"
owo-colors = "4"
wasmtime = "27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
include_dir = "0.7"
sha2 = "0.10"
ureq = { version = "2", features = ["json"] }
